kong-ingress-controller-multi-service/flights-team/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flights-hello-world
  namespace: flights
spec:
  hostnames:
  - gateway-api-flights.tajawal.io
  parentRefs:
    - name: kong-gateway-flights
      namespace: public-gateway-http
      sectionName: http-flights
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-hello-world-service
          port: 80


### this does not give error but as per rules it did not work and ideally it should not work as it is from other namespace ##

# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: flights-hello-world
#   namespace: hotels
# spec:
#   hostnames:
#   - gateway-api-test.tajawal.io
#   parentRefs:
#     - name: kong-gateway-flights
#       namespace: public-gateway
#       sectionName: http-flights
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: nginx-hello-world-service
#           port: 80
